Border render behaves weridly #36731

Closed
opened 2013-09-16 00:33:13 +02:00 by Filip Sauer · 4 comments

%%%--- Operating System, Graphics card ---
win 7 64 bit, AMD Radeon HD 6500M/5600/5700 Series

- Blender version with error, and version that worked ---

2.68a, r60131 both have bug

- Short description of error ---

When making a border render, it renders a different portion than selected by the border. Sometimes it stretches the result's border, sometimes it render with different aspect ratio of the border.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Open the attached scene and render with border. The first time it'll work, but for the second time change the border to a different position (and/or its aspect ratio). It will render with some error - different part, not the whole border area or with stretched border pixels. This doesn't happen with basic default scene as far as I can tell, but encountered this for the second time, so it's definitely redoable.
%%%

%%%--- Operating System, Graphics card --- win 7 64 bit, AMD Radeon HD 6500M/5600/5700 Series - Blender version with error, and version that worked --- 2.68a, r60131 both have bug - Short description of error --- When making a border render, it renders a different portion than selected by the border. Sometimes it stretches the result's border, sometimes it render with different aspect ratio of the border. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Open the attached scene and render with border. The first time it'll work, but for the second time change the border to a different position (and/or its aspect ratio). It will render with some error - different part, not the whole border area or with stretched border pixels. This doesn't happen with basic default scene as far as I can tell, but encountered this for the second time, so it's definitely redoable. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Confirmed on OSX too. Here it seems the border area has a delay of one 'render'. In other words, if I set a new border area the first time I render it will still render the previous area.
Only the second time I render it works fine.

(note: for testing render samples can be set to 1, it shows the bug as well and things are much faster).%%%

%%%Confirmed on OSX too. Here it seems the border area has a delay of one 'render'. In other words, if I set a new border area the first time I render it will still render the previous area. Only the second time I render it works fine. (note: for testing render samples can be set to 1, it shows the bug as well and things are much faster).%%%

%%%It's related to the Persistent Images setting, wasn't syncing the camera data, code in create_session and reset_session got out of sync a bit.

Fix in svn revision 60178, thanks for the report.%%%

%%%It's related to the Persistent Images setting, wasn't syncing the camera data, code in create_session and reset_session got out of sync a bit. Fix in svn revision 60178, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36731
No description provided.