Fix #36731: border render not updating properly with persistent images setting enabled in cycles.